Upgrade Notes
Added more upgrade notes and refined SSO page.